--- a/sites/all/themes/slac/sass/_main_menu.sass
+++ b/sites/all/themes/slac/sass/_main_menu.sass
@@ -5,7 +5,7 @@
   
 +at-breakpoint($small-desktop)
   .main-menu
-    padding: 8px 0 0
+    padding: 9px 0 0
 
 .sf-accordion-toggle
   span
@@ -182,7 +182,7 @@ ul.sf-menu.sf-accordion.sf-expanded
         a
           display: block
           //padding: 0 10px
-          padding-bottom: 3px
+          padding-bottom: 5px
           &.active-trail, &.active
             color: $red
             border-bottom: 2px solid $red
@@ -257,4 +257,6 @@ ul.sf-menu.sf-accordion.sf-expanded
     &.long-menu
       ul
         li 
-          margin: 0 25px  
+          margin: 0 33px  
+          &:first-child
+            margin-left: 17px
